[package]
name = "game"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#crossterm = "0.23.2"
anyhow = "1.0.100"
thiserror = "2.0.17"
smallvec = "1.15.1"
rayon = "1.11.0"
winit = "0.30.12"
device_query = "1.1"
env_logger = "0.10"
log = "0.4"
wgpu = "27.0.1"
pollster = "0.3"
bytemuck = { version = "1.9.1", features = ["derive"] }
image = "0.24.2"
cgmath = "0.18.0"
ab_glyph = "0.2.32"
harfrust = "0.3.2"
skrifa = "0.37.0"
font-kit = "0.14.3"